# OS

./: Vagrantfile
Barrier synchronization/: Vagrantfile  collect_submission.py  readme.md
Barrier synchronization/combined/: Makefile  combined  harness.c
Barrier synchronization/mpi/: Makefile  gtmpi.h  gtmpi1.c  gtmpi2.c  harness.c  mpi1  mpi2
Barrier synchronization/omp/: Makefile  gtmp.h  gtmp1.c  gtmp2.c  harness.c  mp1  mp2
Barrier synchronization/test/: Makefile  combined.c  combined.pbs  mpi.pbs  mpi_dissemination.c  mpi_mcs.c  mpi_tournament.c  omp.pbs  omp_centralized.c  omp_dissemination.c  omp_mcs.c
Distributed file system/docs/: part1.md  part2.md
Distributed file system/part1/: dfs-service.proto  dfslib-clientnode-p1.cpp  dfslib-servernode-p1.cpp  dfslib-servernode-p1.h  dfslib-shared-p1.h
Distributed file system/part2/: dfs-service.proto  dfslib-clientnode-p2.cpp  dfslib-clientnode-p2.h  dfslib-servernode-p2.cpp  dfslib-shared-p2.h
Distributed online store/: CMakeLists.txt  Readme.txt  collect_submission.py
Distributed online store/src/: CMakeLists.txt  store.cc
Distributed online store/test/: CMakeLists.txt  run_tests.cc
Inter-process communication/cache/: cache-student.h  handle_with_cache.c  locals.txt  simplecached  simplecached.c  simplecached_noasan  webproxy  webproxy.c  webproxy_noasan  workload.txt
Inter-process communication/server/: handle_with_curl.c  webproxy  webproxy.c  webproxy_noasan  workload.txt
MapReduce infrastructure/: CMakeLists.txt  Makefile  README.md  collect_submission.py  docker-compose.yml  gen.sh  start-master.sh  start-worker.sh  structure.md  test_mr.py  word_count_test.py
Virtual machine scheduling in KVM/: EnvironmentSetup.md  Vagrantfile  assignfiletoallvm.py  collect_submission.py  destroyallvm.py  setallmaxmemory.py  shutdownallvm.py  startallvm.py  testLibrary.py  vm.py
(+50 files in other folders)
